...
                    crossAxisAlignment: CrossAxisAlignment.start,
                    children: [
                      SizedBox(
                        height: 24,
                        width: 24,
                        child: Checkbox(
                          key: const Key('acceptCheckbox'),
                          value: _agreedToTerms,
                          activeColor: AppColors.primary,
                          onChanged: (val) {
                            setModalState(() {
                              _agreedToTerms = val ?? false;
                            });
...
                      ),
                    ],
                  ),
                ),
                SizedBox(height: 32),
                ElevatedButton(
                  key: const Key('continuePermissionsButton'),
                  onPressed: _agreedToTerms
                      ? () {
                          Navigator.pop(ctx);
                          _requestPermissionsAndContinue();
                        }
                      : null,
...
