...
          content: Column(
            mainAxisSize: MainAxisSize.min,
            children: [
              ListTile(
                title: Text(l10n?.settings_followSystem ?? 'Follow system'),
                leading: Radio<String>(
                  key: const Key('systemRadio'),
                  value: 'system',
                  groupValue: groupValue,
                  onChanged: (v) {
                    ref.read(localeProvider.notifier).setFollowSystem();
                    Navigator.pop(ctx);
                  },
...
